# final_bahamm

./: .gitignore  ADMIN_LOADING_TROUBLESHOOTING.md  ANDROID_FIX_APPLIED.md  ANDROID_TELEGRAM_FIX.md  CLEAR_BROWSER_CACHE_NOW.md  CLOUDFLARE_FINAL_SETUP.md  CLOUDFLARE_PROXY_FIX.txt  CLOUDFLARE_TUNNEL_GUIDE.md  COINS_DISPLAY_FIX.md  COMPLETE_FIX_SUMMARY.md  CORS_FIXED.txt  CROSS_DOMAIN_AUTH_GUIDE.md  Create_Backend_Shortcut.bat  DATABASE_STATUS.md  DEBUG_NO_PRODUCTS.md  DEEP_LINK_PAYMENT_GUIDE.md  DEPLOYMENT_FIXES_APPLIED.md  DEPLOY_COMMANDS.md  DEPLOY_GUIDE_FINAL.md  DEPLOY_NOW.md  DEPLOY_TO_SERVER.md  DIAGNOSE_FRONTEND_ISSUE.md  DOCKER_DEPLOYMENT.md  ENVIRONMENT_AWARE_LINKS.md  ENV_VARIABLE_FIXED.md  ERROR_1033_FIXED.md  FINAL_CONFIGURATION_COMPLETE.md  FINAL_FIX_NO_SMS_FALLBACK.md  FINAL_FIX_SUMMARY.md  FINAL_GUIDE.md  FINAL_STEPS.md  FIX_404_CALLBACK.md  FIX_524_TIMEOUTS_SUMMARY.md  FIX_COMPLETE.txt  FIX_DUPLICATE_ORDERS_ON_CHECKOUT.md  FIX_FONT_403_ERRORS.md  FIX_GROUP_DATA_GUIDE.md  FIX_LOCALHOST_REDIRECT.md  FIX_PAYMENT_REDIRECT_LOCALHOST_VS_PRODUCTION.md  FIX_PRICE_CALCULATION.md  (+297 more)
backend/: .dockerignore  Dockerfile  README.docker.md  README.md  SMS_LOGGING.md  add_indexes.py  backend_log.txt  check_all_groups.py  check_db.py  check_group.py  check_invite.py  check_order_data.py  check_user.py  cors_update_instructions.txt  debug_group.py  debug_user_groups.py  docker-compose.yml  env.example  fix_all_groups.py  fix_categories_db.py  fly.toml  force_settlement_check.py  insert_persian.py  inspect_group.py  main.py  pyproject.toml  requirements.txt  run_backend.bat  (+28 more)
(+352 files in other folders)
